[gd_scene load_steps=16 format=1]

[ext_resource path="res://resources/themes/options.tres" type="Theme" id=1]
[ext_resource path="res://scenes/track_select/track-option/track-option.gd" type="Script" id=2]
[ext_resource path="res://resources/fonts/topo.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://resources/fonts/ubuntu.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]

font/size = 32
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]

font/size = 32
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]

font/size = 24
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="DynamicFont" id=9]

font/size = 16
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 3 )

[sub_resource type="Animation" id=10]

length = 0.6
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 0.6 ), "transitions":FloatArray( 0.25, 1 ), "update":0, "values":[ 0.0, 1.0 ] }

[sub_resource type="Animation" id=11]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:visibility/opacity")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = { "times":FloatArray( 0, 1 ), "transitions":FloatArray( 0.25, 1 ), "update":0, "values":[ 1.0, 0.0 ] }

[node name="track-option" type="Container"]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
theme/theme = ExtResource( 1 )
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
script/script = ExtResource( 2 )

[node name="background" type="Sprite" parent="."]

modulate = Color( 0.196078, 0.196078, 0.196078, 1 )

[node name="title" type="Label" parent="."]

anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 64.0
margin/top = 24.0
margin/right = 0.0
margin/bottom = 56.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 0
text = "title"
valign = 1
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="artist" type="Label" parent="."]

anchor/right = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 64.0
margin/top = 78.0
margin/right = 0.0
margin/bottom = 102.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0, 1, 1 )
text = "artist"
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="name" type="Label" parent="."]

anchor/left = 3
anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 24.0
margin/right = 64.0
margin/bottom = 56.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0, 1, 0, 1 )
text = "name"
align = 2
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="mapper" type="Label" parent="."]

anchor/left = 3
anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 78.0
margin/right = 64.0
margin/bottom = 102.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 1, 1, 1 )
text = "mapper"
align = 2
clip_text = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="duration" type="Label" parent="."]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 1001.0
margin/top = 172.0
margin/right = 64.0
margin/bottom = 195.0
custom_fonts/font = SubResource( 5 )
text = "Duration : 00:00"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="back" type="Button" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 61.0
margin/top = 260.0
margin/right = 277.0
margin/bottom = 290.0
custom_fonts/font = SubResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Back"
flat = true

[node name="music" type="StreamPlayer" parent="."]

stream/stream = null
stream/play = false
stream/loop = true
stream/volume_db = 0.0
stream/autoplay = false
stream/paused = false
stream/loop_restart_time = 0.0
stream/buffering_ms = 500

[node name="tween" type="Tween" parent="music"]

playback/process_mode = 1
playback/active = false
playback/repeat = false
playback/speed = 1.0

[node name="play_cont" type="Container" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = -16.0
margin/top = 0.0
margin/right = 32.0
margin/bottom = 32.0

[node name="Label" type="Label" parent="play_cont"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 24.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0.392157, 1, 1 )
text = "Play"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="auto_mode" type="CheckBox" parent="play_cont"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 64.0
margin/right = 0.0
margin/bottom = 75.0
custom_fonts/font = SubResource( 8 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
text = "Auto mode"
flat = false
align = 0

[node name="play" type="Button" parent="play_cont"]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 24.0
margin/right = 0.0
margin/bottom = 0.0
custom_fonts/font = SubResource( 9 )
custom_colors/font_color = Color( 0.828125, 1, 0, 1 )
custom_colors/font_color_hover = Color( 1, 0.726563, 0, 1 )
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start"
flat = true

[node name="records_cont" type="Container" parent="."]

anchor/top = 3
anchor/right = 3
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 32.0
margin/top = 0.0
margin/right = 16.0
margin/bottom = 32.0

[node name="Label" type="Label" parent="records_cont"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 24.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0.392157, 1, 1 )
text = "Records"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="anim" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fadein = SubResource( 10 )
anims/fadeout = SubResource( 11 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "fadein"

[connection signal="pressed" from="back" to="." method="_on_back_pressed"]

[connection signal="pressed" from="play_cont/auto_mode" to="." method="_on_auto_mode_pressed"]

[connection signal="pressed" from="play_cont/play" to="." method="_on_play_pressed"]

[connection signal="finished" from="anim" to="." method="_on_anim_finished"]


